    
********************************************************************************

  08.07.2022
  deviceServiceVersion = 1013669
  
  [+] Added directIO command SMFPTR_DIO_READ_PORT_NAMES to read bluetooth device 
      MAC address and name. Application can use this command to simplify 
      entering device address. 
  [-] Fixed error with text report and command 0xFF46, print receipt item 2
  
********************************************************************************

  07.07.2022
  deviceServiceVersion = 1013668
  
  [-] Changed default value for user password, was 01 - now 30 (admin password)
  [-] Changed user password for command "0x8C, print duplicate receipt" to admin password
  [-] Changed ecr mode check 
  
********************************************************************************

  21.06.2022
  deviceServiceVersion = 1013667
  
  [-] Fixed error with disabling and enabling bluetooth adapter on BLE connection
  
********************************************************************************

  21.06.2022
  deviceServiceVersion = 1013666

  [-] Removed adding tag 2108
  
********************************************************************************

  15.06.2022
  deviceServiceVersion = 1013665

  [-] Fixed error with receipt ending, that cause receipt duplication
  [+] Added driver version log report in beginFiscalReceipt method
  
********************************************************************************

  09.06.2022
  deviceServiceVersion = 1013664

  [-] Added directIO commands SMFPTR_DIO_REBOOT and SMFPTR_DIO_REBOOT_WAIT.
	  SMFPTR_DIO_REBOOT reboots fiscal printer, 
	  SMFPTR_DIO_REBOOT_WAIT reboots and waits for printer to power up.
	  SMFPTR_DIO_REBOOT = 0x8E;	
	  SMFPTR_DIO_REBOOT_WAIT = 0x8F;
  
********************************************************************************

  07.06.2022
  deviceServiceVersion = 1013663

  [-] Fixed error with 0xFF67 command for fiscal core printers
  