@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "668";
+    public static final String VERSION = "668-2-g94ce2c0";
 }
